--- a/assemblies/pentaho-samples/pom.xml
+++ b/assemblies/pentaho-samples/pom.xml
@@ -5,9 +5,9 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pentaho-platform-assemblies</artifactId>
-    <version>9.0.0.0-SNAPSHOT</version>
+    <version>9.0.0.0-109</version>
   </parent>
   <artifactId>pentaho-samples</artifactId>
-  <version>9.0.0.0-SNAPSHOT</version>
+  <version>9.0.0.0-109</version>
   <packaging>pom</packaging>
 </project>
